# fairseq

./: .gitignore
examples/speech_recognition/kaldi/: add-self-loop-simple  add-self-loop-simple.cc
examples/wav2vec/unsupervised/: env_vars.sh  main.py  new_audio_files.sh  pyproject.toml  train.sh  w2vu_generate.py
examples/wav2vec/unsupervised/config/gan/: w2vu2.yaml
examples/wav2vec/unsupervised/logs/slurm/: new_audio_files.sh-4294967294-2.out  prepare_text.sh-4294967294-2.out
examples/wav2vec/unsupervised/scripts/: check_audio_files.py  divide_and_conquer_data.py  libri_labels.py  phonemize_ref_wrd.sh  prepare_audio_v2.sh  prepare_text.sh  vad_patch.sh  vads_multiprocess.py
examples/wav2vec/unsupervised/xps/: generate.sh  w2v_unsup_gan.sh  w2v_unsup_gan_mimas.sh
