[project]
name = "unsupervised"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cython>=3.2.2",
    "editdistance>=0.8.1",
    "fairseq",
    "fasttext>=0.9.3",
    "flashlight-text>=0.0.7",
    "joblib>=1.5.3",
    "kenlm>=0.3.0",
    "ninja>=1.13.0",
    "npy-append-array>=0.9.19",
    "numpy==1.25.2",
    "phonemizer>=3.3.0",
    "pykaldi>=0.0.1",
    "pyparsing>=3.3.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "soundfile>=0.13.1",
    "tensorboardx>=2.6.4",
    "torch==2.5.0",
    "torchaudio>=2.5.0",
    "wheel>=0.45.1",
]
[tool.uv.sources]
fairseq = { path = "../../..", editable = true }
